--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,8 @@
 html {
   box-sizing: border-box;
+background-color: #f2f2f2;
+font-famil: Georgia, serif;
+list-style: 1.5;
 }
 
 *, *::before, *::after {
