--- a/css/main.css
+++ b/css/main.css
@@ -8,3 +8,9 @@ list-style: 1.5;
 *, *::before, *::after {
   box-sizing: inherit;
 }
+
+.cards {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
