--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,7 @@ list-style: 1.5;
   margin: 0;
   padding: 0;
   list-style-type: none;
+  text-align: center;
 }
 
 .cards li {
@@ -23,4 +24,5 @@ list-style: 1.5;
   background-color: #fff;
   border: 3px solid #e2e2e2;
   border-radius: 10px;
+  text-align: left;
 }
