Add content to file

--- a/css/main.css
+++ b/css/main.css
@@ -42,3 +42,15 @@ list-style: 1.5;
 .cards dl {
   margin-bottom: 1rem;
 }
+
+.cards dt {
+  display: inline-block;
+  width: 6em;
+  font-style: italic;
+}
+
+.cards dd {
+  display: inline-block;
+  margin: 0;
+  min-width: 9em
+}
