--- a/css/main.css
+++ b/css/main.css
@@ -54,3 +54,21 @@ list-style: 1.5;
   margin: 0;
   min-width: 9em
 }
+
+.cards div {
+  text-align: center;
+}
+
+.cards a {
+  display: inline-block;
+  padding: .5em .75em;
+  background-color: #ccc;
+  border-radius: 4px;
+  color: #000;
+  text-decoration: none;
+}
+
+.cards a:hover {
+  background-color: #333;
+  color: #fff;
+}
