--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 html {
   box-sizing: border-box;
 background-color: #f2f2f2;
-font-famil: Georgia, serif;
+font-family: Georgia, serif;
 list-style: 1.5;
 }
 
