--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ html {
   box-sizing: border-box;
 background-color: #f2f2f2;
 font-family: Georgia, serif;
-list-height: 1.5;
+line-height: 1.5;
 }
 
 *, *::before, *::after {
