--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
 html {
   box-sizing: border-box;
-background-color: #f2f2f2;
-font-family: Georgia, serif;
-line-height: 1.5;
+  background-color: #f2f2f2;
+  font-family: Georgia, serif;
+  line-height: 1.5;
 }
 
 *, *::before, *::after {
@@ -52,7 +52,7 @@ line-height: 1.5;
 .cards dd {
   display: inline-block;
   margin: 0;
-  min-width: 9em
+  min-width: 9em;
 }
 
 .cards div {
